--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 after_success:
   - docker build -t cjw7242/docker-frontend ./frontend
   - docker build -t cjw7242/docker-backend ./backend
-  - docker build -t cjw7242/docker-nginx ./nginx
+  - docker build -t cjw7242/docker-nginx ./proxy-nginx
 
   - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
 
