--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.7",
-    "body-parser": "^1.19.0"
+    "nodemon": "^2.0.7"
   }
 }
