--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,6 @@ services:
     volumes:
       - /app/node_modules
       - ./frontend:/app
-    #ports:
-    #  - "4000:3000"
     stdin_open: true
   nginx:
     restart: always #no, on-failure, unless-stopped
@@ -25,21 +23,8 @@ services:
     volumes:
       - /app/node_modules
       - ./backend:/app
-    environment:
-      MYSQL_HOST:  mysql
-      MYSQL_USER: root
-      MYSQL_ROOT_PASSWORD: awdsd123
-      MYSQL_DATABASE: myapp
-      MYSQL_PORT: 3306
-#  mysql:
-#    build: ./mysql    #Dockerfile.dev가 아니므로 자동으로 Dockerfile을 찾음
-#    restart: unless-stopped
-#    container_name: app_mysql
-#    ports:
-#      - "3307:3306"
-#    volumes:
-#      - ./mysql/mysql_data:/var/lib/mysql
-#      - ./mysql/sqls:/docer-entrypoint-initdb.d/
 #    environment:
+#      MYSQL_HOST: mysql
+#      MYSQL_USER: root
 #      MYSQL_ROOT_PASSWORD: awdsd123
 #      MYSQL_DATABASE: myapp
