--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,21 @@ services:
     volumes:
       - /app/node_modules
       - ./backend:/app
+    environment:
+      MYSQL_HOST: mysql
+      MYSQL_USER: root
+      MYSQL_ROOT_PASSWORD: awdsd123
+      MYSQL_DATABASE: myapp
+      MYSQL_PORT: 3306
+#  mysql:
+#    build: ./mysql    #Dockerfile.dev가 아니므로 자동으로 Dockerfile을 찾음
+#    restart: unless-stopped
+#    container_name: app_mysql
+#    ports:
+#      - "3306:3306"
+#    volumes:
+#      - ./mysql/mysql_data:/var/lib/mysql
+#      - ./mysql/sqls:/docker-entrypoint-initdb.d/
 #    environment:
-#      MYSQL_HOST: mysql
-#      MYSQL_USER: root
 #      MYSQL_ROOT_PASSWORD: awdsd123
 #      MYSQL_DATABASE: myapp
